--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <audio controls autoplay loop>
+            <source src="bl-op.mp3" type="audio/mp3">
+        </audio>
+
         <div id="calculator">
         <input id="display" readonly>
         <div id="keys">
